[package]
name = "section_parser_derive"
version = "0.1.1"
edition = "2021"
license = "BSD-2-Clause"
description = "This just exists because I cannot define derive macros inside my binary :("

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.99", features = ["full", "extra-traits"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
